[incubator-kie-issues-2368] Change the default expression format from mvel to java